<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_layout_id"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:hint="@string/full_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/et_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:lines="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/study_program" />

            <Spinner
                android:id="@+id/sp_prodi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/study"
                android:padding="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/domicile" />

            <RadioGroup
                android:id="@+id/rg_domisili"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_DK"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_48"
                    android:checked="true"
                    android:text="@string/in_town" />

                <RadioButton
                    android:id="@+id/rb_LK"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_48"
                    android:checked="true"
                    android:text="@string/out_of_town" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobby" />

            <CheckBox
                android:id="@+id/cb_teknologi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:text="@string/technology" />

            <CheckBox
                android:id="@+id/cb_kuliner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginBottom="20dp"
                android:text="@string/culinary" />

            <Button
                android:id="@+id/bt_detil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_exposure_plus_white_24"
                android:backgroundTint="@android:color/holo_orange_light"
                android:text="@string/detail"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_toast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_1"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/toast"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/bt_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dp_1"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="@string/dialog"
                    android:textColor="#fff" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_notifikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notification" />

                <Button
                    android:id="@+id/bt_snack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/dp_1"
                    android:text="@string/snack_bar" />

                <Button
                    android:id="@+id/bt_keluar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/close" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>